--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "@headlessui/vue": "^1.7.22",
         "@heroicons/vue": "^2.1.5",
+        "date-fns": "^4.1.0",
         "lodash": "^4.17.21"
     }
 }
