--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "laravel/boost": "^1.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.31",
         "mockery/mockery": "^1.6",
