--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "dependencies": {
         "@headlessui/vue": "^1.7.22",
         "@heroicons/vue": "^2.1.5",
+        "chart.js": "^4.5.1",
         "date-fns": "^4.1.0",
-        "lodash": "^4.17.21"
+        "lodash": "^4.17.21",
+        "vue-chartjs": "^5.3.3"
     }
 }
