feat: Introduce marketing pages, update application logo and favicon, and add localization support.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "chart.js": "^4.5.1",
         "date-fns": "^4.1.0",
         "lodash": "^4.17.21",
+        "three": "^0.182.0",
         "vue-chartjs": "^5.3.3"
     }
 }
