Change central domain config to load from env

--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Tenancy (comma-separated list of central domains)
+TENANCY_CENTRAL_DOMAINS=localhost,127.0.0.1
+TENANCY_MAIN_DOMAIN=localhost
